# capops-backend

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: continuous-deployment.yml  continuous-integration.yml
app/: main.cpp
include/Controllers/: FlightDataController.hpp  RiskEventController.hpp  WebSocketController.hpp
include/Converters/: FlightDataConverter.hpp  FlightDataDtoConverter.hpp  MergedRiskEventConverter.hpp  MetadataConverter.hpp  RiskEventConverter.hpp  RiskEventDataConverter.hpp  SectorSummaryConverter.hpp  SectorSummaryDataConverter.hpp  TrackConverter.hpp  TrackDataConverter.hpp
include/Database/: DatabaseConnection.hpp  ResultSet.hpp
include/Dtos/: FlightDataDto.hpp
include/Exceptions/: ApplicationException.hpp  DatabaseException.hpp  EntityModelException.hpp  FileException.hpp  HttpException.hpp  RedisEventBusException.hpp  WebSocketException.hpp
include/Http/: HttpRouter.hpp
include/Managers/: EnvironmentManager.hpp  EnvironmentManagerAppContext.hpp  EnvironmentManagerTest.hpp  FlightDataStateManager.hpp  IEnvironmentManager.hpp  WebSocketSessionManager.hpp
include/ModelConverters/: RiskEventConverter.hpp
include/Models/: FlightData.hpp  MergedRiskEvent.hpp  Metadata.hpp  RiskEvent.hpp  RiskEventData.hpp  SectorSummary.hpp  SectorSummaryData.hpp  Track.hpp  TrackData.hpp
include/Network/: HttpServer.hpp  RedisEventBusReceiver.hpp  WebSocketServer.hpp
include/Proto/: FlightData.hpp
include/Repositories/: IRiskEventRepository.hpp  RiskEventRepository.hpp
include/Services/: MetadataService.hpp  RiskEventService.hpp  SectorSummaryService.hpp  TrackService.hpp
include/Structs/: FlightDataStructs.hpp  TrackStructs.hpp
proto/: flightdata.proto
scripts/: setup.sql
src/Controllers/: RiskEventController.cpp  WebSocketController.cpp
src/Converters/: FlightDataConverter.cpp  FlightDataDtoConverter.cpp  MergedRiskEventConverter.cpp  MetadataConverter.cpp  RiskEventConverter.cpp  RiskEventDataConverter.cpp  SectorSummaryConverter.cpp  SectorSummaryDataConverter.cpp  TrackConverter.cpp  TrackDataConverter.cpp
src/Database/: DatabaseConnection.cpp  ResultSet.cpp
src/Dtos/: FlightDataDto.cpp
src/Exceptions/: ApplicationException.hpp
src/Http/: HttpRouter.cpp
src/Managers/: EnvironmentManager.cpp  EnvironmentManagerAppContext.cpp  EnvironmentManagerTest.cpp  FlightDataStateManager.cpp  WebSocketSessionManager.cpp
src/ModelConverters/: RiskEventConverter.cpp
src/Models/: FlightData.cpp  MergedRiskEvent.cpp  Metadata.cpp  RiskEvent.cpp  RiskEventData.cpp  SectorSummary.cpp  SectorSummaryData.cpp  Track.cpp  TrackData.cpp
src/Network/: HttpServer.cpp  RedisEventBusReceiver.cpp  WebSocketServer.cpp
src/Repositories/: RiskEventRepository.cpp
src/Services/: MetadataService.cpp  RiskEventService.cpp  SectorSummaryService.cpp  TrackService.cpp
tests/: FlightDataConverterTests.cpp  RiskEventServiceTests.cpp
